infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec: # Fix: Change 'sepc' to 'spec'
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels: # Fix: Correct 'lebels' to 'labels'
        app: expiration
    spec:
      containers:
        - name: expiration
          image: asia.gcr.io/microadvance/expiration
